fix: update z-index of scroll up btn closes #25

--- a/src/App.css
+++ b/src/App.css
@@ -900,6 +900,7 @@ display: block;
 
 .styles_scroll-to-top__2A70v {
   box-shadow: 0 9px 25px 0 rgb(	228, 98, 107, 0.2);
+  z-index: 3;
 }
 
 
